--- a/architecture/reverse-proxy/nginx/nginx.conf
+++ b/architecture/reverse-proxy/nginx/nginx.conf
@@ -5,14 +5,13 @@ events { worker_connections 1024; }
 http {
     sendfile on;
     
-    upstream service1 {
-        server service1:4000;
+    upstream home {
+        server service1:5000;
+    }
+    upstream api {
+        server service2:5000;
     }
  
-    upstream service2 {
-        server service2:3000;
-    }
-    
     proxy_set_header   Host $host;
     proxy_set_header   X-Real-IP $remote_addr;
     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -24,18 +23,15 @@ http {
         # Running port
         listen 80;
 
-        # Proxying the connections connections
         location / {
 
-            proxy_pass         http://service1;
-            proxy_redirect     off;
+            proxy_pass         http://home;
 
         }
-        
-        location /service2 {
+        # Proxying the connections connections
+        location /api/ {
 
-            proxy_pass         http://service2;
-            proxy_redirect     off;
+            proxy_pass         http://api/;
 
         }
         
